corrected minor desktop layout issue and navColor

--- a/main.scss
+++ b/main.scss
@@ -69,14 +69,14 @@ $spacer : 10px;
     left:0;
     width:100vw;
     height:100vh;
-    background:$clr-prim-light;
+    background:$clr-sec-light;
     display:flex;
     flex-direction:column;
     justify-content:center;
     align-items:flex-end;
     overflow:hidden;
     pointer-events:all;
-    z-index:1;
+    z-index:-1;
   
     .menuBtn-close{
         width:60px;
@@ -97,7 +97,7 @@ $spacer : 10px;
                 content:'';
                 width:30px;
                 height:3px;
-                background:$clr-prim-dark;
+                background:$clr-sec-darker;
                 position:absolute;
                 top:0;
                 left:0;
@@ -118,7 +118,7 @@ $spacer : 10px;
             margin-right:3*$spacer;
             &:hover >a,
             &:focus > a{
-                color:$clr-prim;
+                color:$clr-sec-darker;
             }
             &:hover > a::before,
             &:focus > a::before{
@@ -129,7 +129,7 @@ $spacer : 10px;
             a{
 
                 text-decoration:none;
-                color:$clr-prim-dark;
+                color:$clr-sec-dark;
                 font-weight:$font-bolder;
                 font-size:1.5rem;
                 position:relative;
@@ -141,7 +141,7 @@ $spacer : 10px;
                     left:0;
                     width:100%;
                     height:2px;
-                    background:$clr-prim-dark; 
+                    background:$clr-sec-darker; 
                     transform:scale(0);
                     transform-origin: right;
                     transition:transform 350ms ease-in-out;   
@@ -260,7 +260,8 @@ section{
     .datewise_graph{
         border:2px solid lightblue;
         width:100%;
-        height:200px;
+        height:auto;
+        overflow:hidden;
     }
 }
 
@@ -272,7 +273,8 @@ section{
     .statewise_graph{
         border:2px solid lightblue;
         width:100%;
-        height:200px;
+        height:auto;
+        overflow:hidden;
     }
     .statewise_viewDetailBtn{
         width:100%;
@@ -346,10 +348,13 @@ section{
     }
     &_mapSvg{
         width:100%;
-        border:2px solid lightblue;
+        // border:2px solid lightblue;
         height:auto;
         margin:0 -2*$spacer;
         overflow:hidden;
+        display:flex;
+        align-items:center;
+        justify-content:center;
 
     }
 }
