--- a/sass/abstracts/color.scss
+++ b/sass/abstracts/color.scss
@@ -6,6 +6,8 @@ $clr-prim-dark :#0C5507;
 $clr-sec : #00A4AE;
 $clr-sec-light:#75D9E3;
 $clr-sec-lighter:#D9F6F8;
+$clr-sec-dark:#05554e;
+$clr-sec-darker:#022421;
 $clr-map-border:#28EDFA;
 
 
